--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="vertical-center">
-            <h1>I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Cambridge, UK. I play the piano and write about <a href="">jazz theory</a>. I travel and <a href="http://500px.com/davidblurton">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</h1>
+            <h1>I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Cambridge, UK. I play the piano and write about <a href="http://jazz.davidblurton.com/">jazz theory</a>. I travel and <a href="http://500px.com/davidblurton">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</h1>
         </main>
 
         <script>
