--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
         <style type="text/css">
         html, body {
-          margin: 10px;
+          margin: 0;
         }
 
-        h1 {
-          font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+        .center {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+
+          box-sizing: border-box;
+          height: 100%;
+          padding: 6%;
+          position: absolute;
+          width: 100%;
+        }
+
+        .big {
+          font-family: "Helvetica Neue", sans-serif;
           font-weight: 900;
           font-size: 28px;
+          font-size: 4.5vw;
           color: #111;
-
           letter-spacing: -1px;
+          line-height: 1.4;
         }
 
         a {
@@ -28,29 +50,12 @@
           background-color: #d14;
           color: #fff;
         }
-
-        @media only screen
-        and (min-width : 1224px) {
-          main {
-            width: 90%;
-            margin: auto;
-            position: absolute;
-            top: 50%; left: 50%;
-            -webkit-transform: translate(-50%,-50%);
-                -ms-transform: translate(-50%,-50%);
-                    transform: translate(-50%,-50%);
-          }
-
-          h1 {
-            font-size: 36px;
-          }
-        }
         </style>
         <title>David Blurton | web developer</title>
     </head>
     <body>
-        <main class="vertical-center">
-            <h1>I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Reykjavik, Iceland. I play the piano and write about <a href="http://jazz.davidblurton.com/">jazz theory</a>. I travel and <a href="http://500px.com/davidblurton">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</h1>
-        </main>
+        <div class="center">
+            <div class="big">I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Reykjavik, Iceland. I'm working on a site to help people <a href="https://tala.is">learn icelandic</a>. I travel and <a href="http://500px.com/davidblurton">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</div>
+        </div>
     </body>
 </html>
