--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         a {
           color: #d14;
           text-decoration: none;
-          border-bottom: 3px solid #d14;
+          border-bottom: .15em solid #d14;
         }
 
         a:hover {
