Update photos link to point to Exposure

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </head>
     <body>
         <div class="center">
-            <div class="big">I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Reykjavik, Iceland. I'm working on a site to help people <a href="https://tala.is">learn icelandic</a>. I travel and <a href="http://500px.com/davidblurton">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</div>
+            <div class="big">I'm a <a href="https://github.com/davidblurton/">web developer</a> living in Reykjavik, Iceland. I'm working on a site to help people <a href="https://tala.is">learn icelandic</a>. I travel and <a href="http://photos.davidblurton.com/">take photos</a>. You can <a href="https://twitter.com/davidblurton">tweet me</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</div>
         </div>
     </body>
 </html>
