--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
         }
 
         .big {
-          font-family: "Helvetica Neue", sans-serif;
+          font-family: sans-serif;
           font-weight: 900;
-          font-size: 28px;
-          font-size: 4.5vw;
+          font-size: calc(1em + 2vw);
           color: #111;
-          letter-spacing: -1px;
-          line-height: 1.4;
+          letter-spacing: -0.1vw;
+          line-height: 1.5;
         }
 
         a {
