Update job dates

--- a/resume.html
+++ b/resume.html
@@ -142,7 +142,7 @@
       <section>
         <header>
           <h2>Independent contractor, Martin Audio</h2>
-          <h4>September 2019 – April 2020</h4>
+          <h4>September 2019 – present</h4>
         </header>
 
         <p>
