Darker secondary text colour

--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
       h4 {
         font-style: italic;
         font-weight: 400;
-        color: rgb(150, 150, 150);
+        color: #232323;
       }
 
       p,
