--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="I'm a freelance audio developer living in Reykjavik, Iceland.">
+        <meta name="description" content="I'm a software developer living in Reykjavik, Iceland.">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
         <style type="text/css">
         html, body {
@@ -50,11 +50,11 @@
           color: #fff;
         }
         </style>
-        <title>David Blurton | Freelance audio developer</title>
+        <title>David Blurton | Software developer</title>
     </head>
     <body>
         <div class="center">
-            <div class="big">I'm a freelance <a href="https://github.com/davidblurton/">audio developer</a> living in Reykjavik, Iceland. I travel and <a href="http://photos.davidblurton.com/">take photos</a>. You can <a href="/resume">check out my résumé</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</div>
+            <div class="big">I'm a <a href="https://github.com/davidblurton/">software developer</a> living in Reykjavik, Iceland. I travel and <a href="http://photos.davidblurton.com/">take photos</a>. You can <a href="/cv">check out my CV</a> or <a href="mailto:david.blurton@gmail.com">send me an email</a>.</div>
         </div>
     </body>
 </html>
