--- a/cv.html
+++ b/cv.html
@@ -112,8 +112,18 @@
       }
 
       @media print {
+        @page {
+          size: A4;
+          margin: 45mm 0;
+        }
+
+        html, body {
+          width: 210mm;
+          height: 297mm;
+        }
+        
         body {
-          font-size: 14px;
+          font-size: 16px;
         }
 
         a {
