Add Running Tide

--- a/cv.html
+++ b/cv.html
@@ -150,7 +150,17 @@
       </div>
 
       <h3>Experience</h3>
+      <section>
+        <header>
+          <h2>Staff Software Engineer, Running Tide</h2>
+          <h4>July 2023 &mdash; present</h4>
+        </header>
 
+        <p>
+          Responsible for front-end strategy, I implemented a component-based system which improved the user experience and speed of development across all front-end apps. I automated the process for quantifying millions of dollars of carbon credits, allowing them to be delivered to customers months earlier. I created a microsite to help the CEO communicate the company's value to investors. I created a customer portal which unlocked digital delivery of carbon credits to our customers. 
+        </p>
+      </section>
+      
       <section>
         <header>
           <h2>Full Stack Developer, Optimal Audio</h2>
